--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Excel MCP Server for manipulating Excel files"
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
+    "fastmcp>=2.0.0,<3.0.0",
     "mcp[cli]>=1.10.1",
     "openpyxl>=3.1.5",
     "typer>=0.16.0"
